--- a/lib/Styles/Core.less
+++ b/lib/Styles/Core.less
@@ -171,3 +171,20 @@ select {
 button.block{
   display: block;
 }
+
+.is-hidden{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}
+
+.no-focus-outline{
+  &:focus{
+    outline: none;
+  }
+}
