--- a/lib/Views/CatalogItemInfo.html
+++ b/lib/Views/CatalogItemInfo.html
@@ -32,7 +32,7 @@
 </script>
 
 <div class="modal-background" data-bind="click: closeIfClickOnBackground">
-    <div class="catalog-item-info" aria-hidden="true" aria-labelledby="modalTitle" aria-describedby="modalDescription" role="dialog" tabindex="0">
+    <div class="catalog-item-info no-focus-outline" aria-hidden="true" aria-labelledby="modalTitle" aria-describedby="modalDescription" role="dialog" tabindex="0">
         <div class="modal-header">
             <button class="modal-close-button" data-bind="click: close">&times;</button>
             <h1 id="modalTitle" data-bind="text: catalogItem.name"></h1>
