--- a/lib/Views/PopupMessage.html
+++ b/lib/Views/PopupMessage.html
@@ -1,5 +1,5 @@
 <div class="modal-background" data-bind="click: closeIfClickOnBackground">
-    <div class="popup-message" data-bind="style: { width: width + 'px', height: height + 'px', 'max-width': maxWidth + 'px', 'max-height': maxHeight + 'px' }, hasFocus: true" tabindex="0" aria-hidden ='false'>
+    <div class="popup-message no-focus-outline" data-bind="style: { width: width + 'px', height: height + 'px', 'max-width': maxWidth + 'px', 'max-height': maxHeight + 'px' }, hasFocus: true" tabindex="0" aria-hidden ='false'>
         <div class="modal-header">
             <button class="modal-close-button" data-bind="click: close">&times;</button>
             <h1 data-bind="text: title"></h1>
