--- a/lib/Views/SettingsPanel.html
+++ b/lib/Views/SettingsPanel.html
@@ -1,6 +1,6 @@
 <div role="dialog" class="settings-panel" data-bind="css: { 'settings-panel-hidden': !isVisible }">
     <div class="settings-panel-callout"></div>
-    <div class="settings-panel-body" data-bind ="hasFocus: isVisible, attr:{'aria-hidden': isVisible ? 'false' : 'true' }" tabindex="0">
+    <div class="settings-panel-body no-focus-outline" data-bind ="hasFocus: isVisible, attr:{'aria-hidden': isVisible ? 'false' : 'true' }" tabindex="0">
         <div class="settings-panel-section">
             <div class="settings-panel-section-header">View</div>
             <div class="settings-panel-section-content" id="map-views">
