--- a/lib/Views/AddDataPanel.html
+++ b/lib/Views/AddDataPanel.html
@@ -1,5 +1,5 @@
 <div class="modal-background" data-bind="click: closeIfClickOnBackground">
-    <div class="add-data-panel" data-bind="hasFocus: true" tabindex="0" aria-hidden ='false'>
+    <div class="add-data-panel no-focus-outline" data-bind="hasFocus: true" tabindex="0" aria-hidden ='false'>
         <div class="modal-header">
             <button class="modal-close-button" data-bind="click: close">&times;</button>
             <h1>Add data</h1>
