--- a/lib/Views/SharePopup.html
+++ b/lib/Views/SharePopup.html
@@ -1,5 +1,5 @@
 <div class="modal-background" data-bind="click: closeIfClickOnBackground">
-    <div class="share-popup" data-bind="hasFocus: true" tabindex="0" aria-hidden ='false'>
+    <div class="share-popup no-focus-outline" data-bind="hasFocus: true" tabindex="0" aria-hidden ='false'>
         <div class="modal-header">
             <button class="modal-close-button" data-bind="click: close">&times;</button>
             <h1 data-bind="text: title"></h1>
