remove hidden input

--- a/lib/Views/DataCatalogTab.html
+++ b/lib/Views/DataCatalogTab.html
@@ -71,8 +71,7 @@
         </div>
     <!-- /ko -->
 </script>
-<input type="button" value="" class="is-hidden" data-bind ="hasFocus: panelHasFocus, attr: {tabindex: isActive ? 0 : -1 }"/>
-<div class="data-catalog-top-group" data-bind="foreach: catalog.group.items">
+<div class="data-catalog-top-group no-focus-outline" data-bind="foreach: catalog.group.items, hasFocus: panelHasFocus, attr: {tabindex: isActive ? 0 : -1 }">
     <!-- ko if: !isHidden -->
         <div class="data-catalog-top-group-header" data-bind="click: $root.clickOpen.bind($root)">
             <a href="#" class="data-catalog-top-group-label" data-bind="text: name"></a>
