--- a/lib/Views/FeatureInfoPanelSection.html
+++ b/lib/Views/FeatureInfoPanelSection.html
@@ -1,5 +1,5 @@
-<script type="text/html" id="infoHtml-template">
-    <div data-bind="markdown: infoHtml"></div>
+<script type="text/html" id="feature-info-panel-section-template">
+    <div data-bind="markdown: info"></div>
 </script>
 
 <div class="feature-info-panel-section">
@@ -15,7 +15,7 @@
     </div>
     <div class="feature-info-panel-section-content-wrapper" data-bind ="css:feature == terria.selectedFeature ?'open': 'closed'">
         <div class="feature-info-panel-section-content" data-bind="css: { 'feature-info-panel-section-content-white-background': useWhiteBackground }">
-            <div data-bind="template: {name: 'infoHtml-template', afterRender: renderCustomComponents.bind($data)}"></div>
+            <div data-bind="template: {name: 'feature-info-panel-section-template', afterRender: renderCustomComponents.bind($data)}"></div>
         </div>
     </div>
 </div>
