Revert "Keep a margin between paragraphs, but not after the last one."
This reverts commit e2a53cb8624e332f8c1c04c87c7bf0a7444cb8be.

--- a/lib/Styles/Core.less
+++ b/lib/Styles/Core.less
@@ -204,11 +204,7 @@ select {
 
   p {
     margin-top: 0;
-    margin-bottom: 1rem;
-  }
-
-  p:last-child {
-    margin-bottom: 0;
+    margin-bottom: 0; // 1rem;
   }
 
   strong { font-weight: bold }
