--- a/lib/Views/NowViewingTab.html
+++ b/lib/Views/NowViewingTab.html
@@ -1,5 +1,5 @@
 <script type="text/html" id="now-viewing-tree-item-template">
-    <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 2)">
+    <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 1)">
         <div class="data-catalog-member-top-row">
             <!-- ko if: hasChildren -->
                 <div class="data-catalog-icon-holder clickable" data-bind="click: toggleOpen">
@@ -60,53 +60,15 @@
                     <div class="now-viewing-action clickable" data-bind="click: toggleEnabled" title="Remove this data item from the Now Viewing panel and from the map.">Remove</div>
                 </div>
 
-                <div class="now-viewing-item-opacity" data-bind="if: supportsOpacity">
-                    OPACITY: <span data-bind="text: Math.round(opacity * 100) + '%'"></span>
-                    <input class="now-viewing-opacity-slider" type="range" min="0" max="1" step="0.01" data-bind="value: opacity, valueUpdate: 'input'" />
+                <div class="now-viewing-section" data-bind="visible: isLoading">
+                    <div class="now-viewing-section-contents">
+                        <span data-bind="text: typeof loadingMessage !== 'undefined' ? loadingMessage : 'Loading...'"></span>
+                        <img data-bind="attr: { src: terria.baseUrl + 'images/ajax-loader.gif' }" width="16" height="16" />
+                    </div>
                 </div>
 
-                <!-- ko if: type === 'abs-itt'-->
-                <div class="now-viewing-abs-controls">
-                     <div class="now-viewing-abs-checkbox clickable" data-bind="click: function(data, event) { displayPercent = !displayPercent; }, cesiumSvgPath: { path: displayPercent ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }">TEST</div>
-                    <div class="now-viewing-abs-percent" data-bind="text: 'Display as percent of region population'"></div>
-                </div>
-                <!-- /ko -->
-
-                <!-- ko foreach: legendUrls || [] -->
-                    <!-- ko if: $root.urlIsImage($data) -->
-                    <a data-bind="attr: { href: $data }" target="_blank">
-                        <img class="now-viewing-legend-image" data-bind="attr: { src: $data }" />
-                    </a>
-                    <!-- /ko -->
-
-                    <!-- ko if: !$root.urlIsImage($data) -->
-                    <a class="now-viewing-legend-text" data-bind="attr: { href: $data }" target="_blank">Open legend in a separate tab</a>
-                    <!-- /ko -->
-                <!-- /ko -->
-
-                <!-- ko if: !legendUrls || legendUrls.length === 0 -->
-                    <!-- ko if: type !== 'abs-itt' -->
-                    <div class="now-viewing-legend-text">No legend available for this data item.</div>
-                    <!-- /ko -->
-                    <!-- ko if: type === 'abs-itt' -->
-                    <div class="now-viewing-legend-text">Select at least one code in each data area.</div>
-                    <!-- /ko -->
-                <!-- /ko -->
-
-                <!-- ko if: type === 'abs-itt' -->
-                <div class="now-viewing-section">
-                    <!-- ko if: absDataset && absDataset.items && absDataset.items.length > 0 -->
-                    <div class="now-viewing-section-contents" data-bind="template: { name: 'now-viewing-tree-item-template', foreach: absDataset.items }"></div>
-                    <!-- /ko -->
-                </div>
-                <!-- /ko -->
-
-                <!-- ko if: type === 'csv' -->
-                <div class="now-viewing-section">
-                    <!-- ko if: csvDataset -->
-                    <div class="now-viewing-section-contents" data-bind="template: { name: 'now-viewing-tree-item-template', foreach: csvDataset }"></div>
-                    <!-- /ko -->
-                </div>
+                <!-- ko foreach: $root.getSections($data) -->
+                <div class="now-viewing-section" data-bind="embeddedComponent: $data"></div>
                 <!-- /ko -->
             </div>
         </div>
