--- a/lib/Styles/Core.less
+++ b/lib/Styles/Core.less
@@ -168,6 +168,27 @@ select {
   padding-left: 5px;
 }
 
+button.block{
+  display: block;
+}
+
+.is-hidden{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}
+
+.no-focus-outline{
+    &:focus{
+      outline: none;
+  }
+}
+
 .markdown {
   img { max-width: 100%;
         height: auto; }
@@ -196,7 +217,6 @@ select {
     margin-bottom: .5em;
   }
 
-
   h1 { font-size: 2rem }
   h2 { font-size: 1.5rem }
   h3 { font-size: 1.25rem }
@@ -204,11 +224,11 @@ select {
   h5 { font-size: .875rem }
   h6 { font-size: .75rem }
 
-  //if any of these headings are displayed in a table cell, they shouldn't have top margin
   td {
     min-width: 100px;
     h1, h2, h3, h4, h5, h6{
-    margin-top: 0;
+      //if any of these headings are displayed in a table cell, they shouldn't have top margin
+      margin-top: 0;
     }
   }
 
