--- a/lib/Sass/nationalmap.scss
+++ b/lib/Sass/nationalmap.scss
@@ -235,6 +235,8 @@ header{
   right: 50px;
   overflow-y: auto;
   overflow-x: hidden;
+  color: #fff;
+  padding: 0.5rem;
 }
 .feature-info-panel__section{
 
