--- a/lib/Views/LegendSection.html
+++ b/lib/Views/LegendSection.html
@@ -1,4 +1,4 @@
-<div data-bind="foreach: catalogMember.legendUrls || []">
+<div data-bind="foreach: proxiedLegendUrls || []">
     <!-- ko if: $root.urlIsImage($data) -->
     <a data-bind="attr: { href: $data }" target="_blank">
         <img class="now-viewing-legend-image" data-bind="attr: { src: $data }" />
@@ -10,7 +10,7 @@
     <!-- /ko -->
 </div>
 
-<div data-bind="if: !catalogMember.legendUrls || catalogMember.legendUrls.length === 0">
+<div data-bind="if: !proxiedLegendUrls || proxiedLegendUrls.length === 0">
     <!-- ko if: catalogMember.type !== 'abs-itt' -->
     <div class="now-viewing-legend-text">No legend available for this data item.</div>
     <!-- /ko -->
