--- a/lib/Sass/global/_variables.scss
+++ b/lib/Sass/global/_variables.scss
@@ -1,3 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 $font : 'Roboto', sans-serif;
 $dark: #282D32;
+
+$work-bench-width : 320px;
+
+//screen sizes
+
+$sm : 40em;
+$md: 52em;
+$lg: 64em;
