--- a/lib/Views/InvokeFunctionPanel.html
+++ b/lib/Views/InvokeFunctionPanel.html
@@ -4,16 +4,16 @@
             <div class="modal-close-button" data-bind="click: close">&times;</div>
             <h1 data-bind="text: catalogFunction.name"></h1>
         </div>
-        <div class="invoke-function-panel-content">
-            <form data-bind="submit: invokeFunction">
+        <form data-bind="submit: invokeFunction">
+            <div class="invoke-function-panel-content">
                 <div class="invoke-function-panel-description" data-bind="markdown: catalogFunction.description"></div>
                 <div class="invoke-function-parameters" data-bind="foreach: catalogFunction.parameters">
                     <div class="invoke-function-parameter" data-bind="embeddedComponent: $root._getComponentForParameter($data)"></div>
                 </div>
-                <div class="invoke-function-panel-go-button">
-                    <button type="submit">Go!</button>
-                </div>
-            </form>
-        </div>
+            </div>
+            <div class="invoke-function-panel-footer">
+                <button type="submit">Run Analysis</button>
+            </div>
+        </form>
     </div>
 </div>
