--- a/lib/Sass/partial/_modal_window.scss
+++ b/lib/Sass/partial/_modal_window.scss
@@ -1,1 +1,45 @@
+.modal-wrapper{
+  width: 100vw;
+  height: 100vh;
+
+}
+
+.modal-content{
+  background: #eee;
+  max-height: 90vh;
+  overflow-y: auto;
+}
+
+.modal-overlay{
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.5);
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.modal-content{
+  width: 800px;
+  max-width: 95%;
+}
+
+.tab-panel{
+  background: #fff;
+  width: 100%;
+  .panel-content{
+    height: 500px;
+    max-height: calc(100vh - 100px);
+    overflow: hidden;
+  }
+  .search-data{
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 100%;
+  }
+}
+
+.panel-content{
+  padding: 15px;
+}
 
