data panel scroll bar

--- a/lib/Sass/partial/_base.scss
+++ b/lib/Sass/partial/_base.scss
@@ -36,12 +36,12 @@ input[type=range]{
 
 ::-webkit-scrollbar-track
 {
-  background: rgba(#fff, 0.1);
+  background: rgba(#000, 0.1);
 }
 
 ::-webkit-scrollbar-thumb
 {
-  background: rgba(#fff, 0.3);
+  background: rgba(#000, 0.3);
 }
 
 
