--- a/lib/Styles/FeatureInfoPanel.less
+++ b/lib/Styles/FeatureInfoPanel.less
@@ -156,6 +156,15 @@
     clear: both;
 }
 
+.feature-info-panel-section-components {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.feature-info-panel-section-component {
+}
 
 @media print {
     .feature-info-panel {
