--- a/lib/Sass/partial/_layout.scss
+++ b/lib/Sass/partial/_layout.scss
@@ -12,6 +12,7 @@
   position: absolute;
   top: 0;
   right: 0;
+  width: calc(100% - 320px);
   @media(screen and max-width: $sm){
     //temp
     left: 0;
