--- a/lib/Sass/partial/_base.scss
+++ b/lib/Sass/partial/_base.scss
@@ -19,6 +19,13 @@ input[type=range]{
   vertical-align: middle;
 }
 
+.btn.label{
+  font-weight: 700;
+  color: #fff;
+  opacity: 0.9;
+  text-transform: uppercase;
+}
+
 
 .p{
   font-size: 1rem;
