setting panel ui

--- a/lib/Sass/global/_variables.scss
+++ b/lib/Sass/global/_variables.scss
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
 $font : 'Roboto', sans-serif;
 $dark: #282D32;
+$dark-lighter: #595B60;
 
 $work-bench-width : 350px;
 
