--- a/lib/Sass/partial/_base.scss
+++ b/lib/Sass/partial/_base.scss
@@ -140,7 +140,7 @@ div[aria-hidden='true']
 }
 
 .now-viewing__item{
-  background: #595B60;
+  background: $dark-lighter;
   padding: 0 10px;
   margin-bottom: 5px;
   label{
