show loading text when chart panel loading

--- a/lib/Styles/ChartPanel.less
+++ b/lib/Styles/ChartPanel.less
@@ -52,6 +52,13 @@
     .opaque-to-input;
 }
 
+.chart-panel-loading {
+    height: 200px;
+    text-align: center;
+    margin-top: 80px;
+    color: @chart-text-color;
+}
+
 .chart-panel-section {
 }
 
@@ -74,7 +81,6 @@
     font-weight: lighter;
     padding: 15px;
     overflow: auto;
-    // max-height: 600px; // adjusted dynamically in FeatureInfoPanelViewModel.js
     text-align: left;
 }
 
