--- a/lib/Views/ChartPanel.html
+++ b/lib/Views/ChartPanel.html
@@ -6,6 +6,11 @@
                     <span class="chart-panel-section-label" data-bind="text: title"></span>
                     <div class="chart-panel-close-button" data-bind="click: close">&times;</div>
                 </div>
+                <!-- ko if: isLoading -->
+                <div class="chart-panel-loading">
+                    Loading…
+                </div>
+                <!-- /ko -->
                 <div class="chart-panel-section" data-bind="foreach: charts">
                     <div class="chart-panel-section-content">
                         <div data-bind="embeddedComponent: $data">
