--- a/lib/Views/ChartPanel.html
+++ b/lib/Views/ChartPanel.html
@@ -1,6 +1,6 @@
 <div class="chart-panel-holder" data-bind="css: { 'chart-panel-holder-hidden': !isVisible }">
     <div class="chart-panel-holder-inner">
-        <div class="chart-panel" data-bind="style: { 'width': width + 'px' }">
+        <div class="chart-panel">
             <div class="chart-panel-body">
                 <div class="chart-panel-header">
                     <span class="chart-panel-section-label" data-bind="text: title"></span>
