--- a/lib/Styles/ChartPanel.less
+++ b/lib/Styles/ChartPanel.less
@@ -110,30 +110,30 @@
     }
 }
 
-@media screen and (max-width: 700px), screen and (max-height: 420px) {
-    .chart-panel-holder {
-        .modal-background;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        display: table;
-        width: 100%;
-        height: 100%;
-    }
-    .chart-panel-holder-inner {
-        display: table-cell;
-        text-align: center;
-        vertical-align: middle;
-    }
-    .chart-panel {
-        display: inline-block;
-        position: relative;
-        top: auto;
-        right: auto;
-    }
-    .chart-panel-hidden {
-        display: none;
-    }
-}
+// @media screen and (max-width: 700px), screen and (max-height: 420px) {
+//     .chart-panel-holder {
+//         .modal-background;
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         right: 0;
+//         bottom: 0;
+//         display: table;
+//         width: 100%;
+//         height: 100%;
+//     }
+//     .chart-panel-holder-inner {
+//         display: table-cell;
+//         text-align: center;
+//         vertical-align: middle;
+//     }
+//     .chart-panel {
+//         display: inline-block;
+//         position: relative;
+//         top: auto;
+//         right: auto;
+//     }
+//     .chart-panel-hidden {
+//         display: none;
+//     }
+// }
