--- a/lib/Sass/global/_variables.scss
+++ b/lib/Sass/global/_variables.scss
@@ -5,6 +5,14 @@ $dark-lighter: #595B60;
 
 $work-bench-width : 350px;
 
+$border-color: rgba(#fff, 0.2);
+
+$border-style: 2px solid $border-color;
+
+
+$padding-small: 10px;
+$padding: 15px;
+
 //screen sizes
 
 $sm : 40em;
