--- a/lib/Sass/partial/_map_navigation.scss
+++ b/lib/Sass/partial/_map_navigation.scss
@@ -1,7 +1,7 @@
 .compass{
   pointer-events: auto;
   position: fixed;
-  right: 15px;
+  right: $padding;
   top: 75px;
   width: 95px;
   height: 95px;
