--- a/lib/Sass/partial/_layout.scss
+++ b/lib/Sass/partial/_layout.scss
@@ -15,6 +15,10 @@
   right: 0;
   left: 0;
   height: 100vh;
+  canvas{
+    width: 100%;
+    height: 100%;
+  }
   // width: 100%;
 
   @media(screen and min-width: $sm){
