min height on chart loading

--- a/lib/Styles/ChartPanel.less
+++ b/lib/Styles/ChartPanel.less
@@ -33,6 +33,7 @@
 
 .chart-panel {
     .panel;
+    min-height: 300px;
     border-top: solid 1px @panel-element-border;
     background-color: @panel-background-color;
 
