--- a/lib/Sass/global/_variables.scss
+++ b/lib/Sass/global/_variables.scss
@@ -3,6 +3,8 @@ $font : 'Roboto', sans-serif;
 $dark: #282D32;
 $dark-lighter: #595B60;
 
+$font-size-small: 0.9rem;
+
 $work-bench-width : 350px;
 
 $border-color: rgba(#fff, 0.2);
