--- a/lib/Sass/partial/_buttons.scss
+++ b/lib/Sass/partial/_buttons.scss
@@ -11,7 +11,7 @@
 // Style guide: 1.0
 //
 
-$btn-setting-size: 48px;
+$btn-setting-size: 35px;
 
 // to be removed
 .btn{
@@ -28,12 +28,28 @@ $btn-setting-size: 48px;
 }
 
 .btn-setting{
-  font-size: 1.5rem;
   background: #fff;
-  padding: 1rem;
+  padding: 0 4px;
   border-radius: 50%;
   height: $btn-setting-size;
   width: $btn-setting-size;
+  line-height: $btn-setting-size;
+  font-size: 27px;
+  box-shadow: 0 0px 3px 0 rgba(#000, 0.5), 0 0px 1px 0 rgba(#000, 0.3);
+  margin: 0 auto;
+  display: block;
+  @include transition(all 0.5s ease-in-out);
+  &:hover{
+    box-shadow: 0 0px 10px 0 rgba(#000, 0.3), 0 0px 5px 0 rgba(#000, 0.6);
+    @include rotate(-30);
+  }
+
+  .is-open & {
+    @include rotate(-180);
+    &:hover{
+      @include rotate(30);
+    }
+  }
 }
 
 .btn-catalogue,
@@ -110,5 +126,10 @@ $btn-setting-size: 48px;
 .btn.search-clear{
   position: absolute;
   right: $padding;
+}
+
+.btn-add-to-map{
+  font-size: 20px;
+  color: $color-primary;
 }
 
