--- a/lib/Sass/partial/_settingPanel.scss
+++ b/lib/Sass/partial/_settingPanel.scss
@@ -1,8 +1,22 @@
-.setting-panel-inner{
+.setting-panel{
+  width: $work-bench-width;
+  position: relative;
+  z-index: 1;
+}
+
+
+
+  .setting-panel-inner{
+      @include transform (scale(0) translateZ(0));
+      @include transition(0.2s all cubic-bezier(0.4, 0, 0.2, 1));
+      @include transform-origin(top center);
+
       background: #fff;
       width: $work-bench-width;
       position: absolute;
-      margin-top: 20px;
+      margin-top: -10px;
+      z-index: -1;
+      padding-top: 10px;
       .basemap{
         height: 150px;
         font-size: 0.8rem;
@@ -11,5 +25,9 @@
         width: 100%;
         display: block;
       }
+  .setting-panel.is-open &{
+    @include transform (scale(1) translateZ(0));
     }
+  }
+
 
