--- a/lib/Sass/global/_variables.scss
+++ b/lib/Sass/global/_variables.scss
@@ -20,14 +20,16 @@ $font-size-small: 0.95rem;
 $font-size-mini: 0.8rem;
 
 $work-bench-width : 350px;
+$setting-panel: 300px;
 
 $border-color: rgba(#fff, 0.2);
 
 $border-style: 2px solid $border-color;
 
 
-$padding-small: 10px;
+$padding-small: 8px;
 $padding: 10px;
+$padding-mini: 3px;
 
 //screen sizes
 
