--- a/lib/Sass/partial/_feature_info_panel.scss
+++ b/lib/Sass/partial/_feature_info_panel.scss
@@ -1,3 +1,19 @@
 .feature-info-panel-section{
   font-size: 0.9rem;
 }
+
+.feature-info-panel{
+  position: fixed;
+  top: 100px;
+  background:$dark;
+  width: 500px;
+  max-height: 500px;
+  right: 100px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  color: #fff;
+  padding: 0.5rem;
+}
+.feature-info-panel__section{
+
+}
